# cfitsio

./: .gitignore  .travis.yml  BUILD.md  CHANGES.md  Changes.github.rst  Changes.md  Changes.rst  INSTALL.git  INSTALL.md  Makefile.am  README  README.md  README.repack  README.rst  ax_check_zlib.m4  build.bash  build.sh  cfitsio-autoheader.patch  cfitsio-repack.bash  cfitsio.pc.in  circle.yml  configure.ac  drvrgsiftp.c  drvrnet.c  drvrsmem.c  drvrsmem.h  fitsio.h  fitsio2.h  install-cfitsio.sh  make-cfitsio-tarball.sh  prepare.bash  sync.bash  sync.sh
addons/: Changes.github.rst  Changes.rst  Makefile.am  README.github  README.rst  cfitsio.pc.in  configure.ac  fitsio_config.h.in
addons/m4/: ax_pthread.m4  ax_zlib.m4
addons/patches/: cfitsio-config.patch  cfitsio-dont-export-constants.patch  cfitsio-linuxdef.patch  cfitsio-wrong-return.patch
autotools/: Makefile.am  cfitsio.pc.in  configure.ac
autotools/m4/: ax_cfitsio.m4  ax_pkg_lib.m4  ax_zlib.m4
debian/: README.examples  changelog  control  copyright  fitscopy.1  fpack.1  funpack.1  libcfitsio-bin.install  libcfitsio-bin.manpages  libcfitsio-doc.dirs  libcfitsio-doc.doc-base.cfitsio  libcfitsio-doc.doc-base.cfitsio-quick  libcfitsio-doc.doc-base.fitsio  libcfitsio-doc.docs  libcfitsio-doc.examples  libcfitsio2.symbols  rules
debian/patches/: 01-pthread-mutex.patch  02-system-cfortran.patch  03-off_t.diff  04-buildflags.diff  05-system-zlib.patch  06-fpack-funpack-dynamic-link.diff  07-testprog-static-link.diff  08-hurd.diff  series
patches/: cfitsio-config.patch  cfitsio-macros-configure.patch  cfitsio-off_t.patch
